--- a/WEB/wwwroot/view/ListaDePecas.view.xml
+++ b/WEB/wwwroot/view/ListaDePecas.view.xml
@@ -15,7 +15,7 @@
                 items="{pecas>/}">
                 <headerToolbar>
                     <OverflowToolbar id="otbSubheader">
-                        <OverflowToolbarButton tooltip="Add" text="Add" icon="sap-icon://add"/>
+                        <OverflowToolbarButton tooltip="Adicionar" text="Add" icon="sap-icon://add-equipment" type="Accept"/>
                         <ToolbarSpacer/>
                         <SearchField ariaLabelledBy="text1" id="maxPrice" liveChange="onFilter">
                             <layoutData><OverflowToolbarLayoutData maxWidth="300px" shrinkable="true" priority="NeverOverflow"/></layoutData>
@@ -23,11 +23,11 @@
                     </OverflowToolbar>
                 </headerToolbar>
                 <columns>
-                    <Column width="12em"><Text text="Nome" /></Column>
-                    <Column width="12em"><Text text="Descrição" /></Column>
-                    <Column width="12em"><Text text="Categoria" /></Column>
-                    <Column width="12em"><Text text="Data de Fabricação" /></Column>
-                    <Column width="12em"><Text text="Estoque" /></Column>
+                    <Column width="12em"><Text text="{i18n>ColunaNome}" /></Column>
+                    <Column width="12em"><Text text="{i18n>ColunaDescricao}" /></Column>
+                    <Column width="12em"><Text text="{i18n>ColunaCategoria}" /></Column>
+                    <Column width="12em"><Text text="{i18n>ColunaDataDeFabricacao}" /></Column>
+                    <Column width="12em"><Text text="{i18n>ColunaEstoque}" /></Column>
                 </columns>
                 <items>
                     <ColumnListItem>
@@ -35,7 +35,18 @@
                             <Text text="{pecas>nome}" />
                             <Text text="{pecas>descricao}" />
                             <Text text="{pecas>categoria}" />
-                            <Text text="{pecas>dataDeFabricacao}" />
+                            <Text
+                                text="{
+                                    path: 'pecas>dataDeFabricacao',
+                                    type: 'sap.ui.model.type.Date',
+                                    formatOptions: {
+                                    style: 'short',
+                                        source: {
+                                            pattern: 'yyyy-MM-ddTHH:mm:ss.mmm'
+                                        }
+                                    }
+                                }"
+                            />
                             <Text text="{pecas>estoque}" />
                         </cells>
                     </ColumnListItem>
