--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -1,9 +1,26 @@
 <mvc:View
+    height="100%"
     controllerName="PedroAutoPecas.controller.Detalhe"
-    xmlns="sap.m"
-    xmlns:mvc="sap.ui.core.mvc">
+    xmlns:mvc="sap.ui.core.mvc"
+	xmlns:core="sap.ui.core"
+	xmlns="sap.m">
     <Page
         showNavButton="true"
         navButtonPress=".onNavBack">
+        <Text text="{pecas>nome}" />
+        <Text text="{pecas>descricao}" />
+        <Text text="{pecas>categoria}" />
+        <Text
+        text="{
+            path: 'pecas>dataDeFabricacao',
+            type: 'sap.ui.model.type.Date',
+            formatOptions: {
+                style: 'short',
+                source: {
+                    pattern: 'yyyy-MM-ddTHH:mm:ss.mmm'
+                }
+            }
+        }" />
+        <Text text="{pecas>estoque}" />
     </Page>
 </mvc:View>
