--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -3,36 +3,54 @@
     controllerName="PedroAutoPecas.controller.Detalhe"
     xmlns:mvc="sap.ui.core.mvc"
 	xmlns:core="sap.ui.core"
-	xmlns="sap.m">
-    <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".onNavBack">
-
-        <Toolbar>
-            <ToolbarSpacer/>
-            <Button text="Editar" type="Transparent"/>
-            <Button text="Remover" type="Transparent"/>
-        </Toolbar>
-        
-        <Title text="{Detalhe>/nome}" />
-        <ToolbarSpacer/>
-        <ToolbarSpacer/>
-        <Text text="{Detalhe>/descricao}" />
-        <ToolbarSpacer/>
-        <ToolbarSpacer/>
-        <Text text="{Detalhe>/categoria}" />
-        <ToolbarSpacer/>
-        <ToolbarSpacer/>
-        <Text
-            text="{
-                path: 'Detalhe>/dataDeFabricacao',
-                type: 'sap.ui.model.type.Date',
-                formatOptions: {
-                style: 'short',
-                    source: {
-                        pattern: 'yyyy-MM-ddTHH:mm:ss.mmm'
-                    }
-                }
-            }" />
-            <ToolbarSpacer/>
-            <ToolbarSpacer/>
+	xmlns="sap.m"
+    xmlns:l="sap.ui.layout"
+	xmlns:f="sap.ui.layout.form">
+    <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar">
+        <headerContent>
+            <Button text="editar" icon="sap-icon://edit" width="auto" type="Attention"/>
+            <Button text="excluir" icon="sap-icon://delete" width="auto" type="Reject"/>
+        </headerContent>
+        <VBox class="sapUiSmallMargin" >
+            <f:SimpleForm id="SimpleFormDisplay354"
+                editable="false"
+                layout="ResponsiveGridLayout"
+                title="Peça"
+                labelSpanXL="3"
+                labelSpanL="3"
+                labelSpanM="3"
+                labelSpanS="12"
+                adjustLabelSpan="false"
+                emptySpanXL="4"
+                emptySpanL="4"
+                emptySpanM="4"
+                emptySpanS="0"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1"
+                singleContainerFullSize="false" >
+                <f:content>
+                    <Label text="Nome" />
+                    <Text text="{peca>/nome}" />
+                    <Label text="Descrição" />
+                    <Text text="{peca>/descricao}" />
+                    <Label text="Categoria" />
+                    <Text text="{peca>/categoria}" />
+                    <Label text="Data de Fabricação" />
+                    <Text text="{
+                        path: 'peca>/dataDeFabricacao',
+                        type: 'sap.ui.model.type.Date',
+                        formatOptions: {
+                        style: 'short',
+                            source: {
+                                pattern: 'yyyy-MM-ddTHH:mm:ss.mmm'
+                            }
+                        }
+                    }" />
+                    <Label text="Estoque" />
+                    <Text text="{peca>/estoque}" />
+                </f:content>
+            </f:SimpleForm>
+        </VBox>
     </Page>
 </mvc:View>
