--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -8,8 +8,8 @@
 	xmlns:f="sap.ui.layout.form">
     <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar">
         <headerContent>
-            <Button text="editar" icon="sap-icon://edit" width="auto" type="Attention"/>
-            <Button text="excluir" icon="sap-icon://delete" width="auto" type="Reject"/>
+            <Button text="{i18n>BotaoEditar}" icon="sap-icon://edit" width="auto" type="Accept"/>
+            <Button text="{i18n>BotaoRemover}" icon="sap-icon://delete" width="auto" type="Reject"/>
         </headerContent>
         <VBox class="sapUiSmallMargin" >
             <f:SimpleForm id="SimpleFormDisplay354"
