--- a/WEB/wwwroot/view/ListaDePecas.view.xml
+++ b/WEB/wwwroot/view/ListaDePecas.view.xml
@@ -11,7 +11,7 @@
         <content>
             <Table 
                 id="idProductsTable"
-                items="{peca>/}">               
+                items="{pecas>/}">               
                 <headerToolbar>
                     <OverflowToolbar  id="otbSubheader">
                         <Title text="{i18n>TituloDaLista}"/>
@@ -30,14 +30,14 @@
                     <Column width="12em"><Text text="{i18n>ColunaEstoque}" /></Column>
                 </columns>
                 <items>
-                    <ColumnListItem type="Navigation" press="aoClicar">
+                    <ColumnListItem type="Navigation" press="aoClicarNaLinha">
                         <cells>
-                            <Text text="{peca>nome}" />
-                            <Text text="{peca>descricao}" />
+                            <Text text="{pecas>nome}" />
+                            <Text text="{pecas>descricao}" />
                             <Text text="{peca>categoria}" />
                             <Text
                                 text="{
-                                    path: 'peca>dataDeFabricacao',
+                                    path: 'pecas>dataDeFabricacao',
                                     type: 'sap.ui.model.type.Date',
                                     formatOptions: {
                                     style: 'short',
@@ -46,7 +46,7 @@
                                         }
                                     }
                                 }" />
-                            <Text text="{peca>estoque}" />
+                            <Text text="{pecas>estoque}" />
                         </cells>
                     </ColumnListItem>
                 </items>
