--- a/WEB/wwwroot/view/ListaDePecas.view.xml
+++ b/WEB/wwwroot/view/ListaDePecas.view.xml
@@ -4,7 +4,7 @@
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:core="sap.ui.core"
 	xmlns="sap.m">
-    <Page showHeader="false" enableScrolling="true" showNavButton="false">
+    <Page showHeader="true" enableScrolling="true" showNavButton="false" title="Auto Peças" titleAlignment="Center">
         <content>
             <Table id="idProductsTable" items="{pecas>/}">               
                 <headerToolbar>
