--- a/WEB/wwwroot/view/ListaDePecas.view.xml
+++ b/WEB/wwwroot/view/ListaDePecas.view.xml
@@ -11,7 +11,7 @@
                     <OverflowToolbar  id="otbSubheader">
                         <Title text="{i18n>TituloDaLista}"/>
                         <ToolbarSpacer/>
-                        <OverflowToolbarButton tooltip="Adicionar" text="Add" icon="sap-icon://add-equipment" type="Accept" />
+                        <OverflowToolbarButton press="aoClicarAdicionar" tooltip="Adicionar" text="Add" icon="sap-icon://add-equipment" type="Accept" />
                         <SearchField ariaLabelledBy="text1" id="maxPrice" liveChange="onFilter">
                             <layoutData><OverflowToolbarLayoutData maxWidth="300px" shrinkable="true" priority="NeverOverflow"/></layoutData>
                         </SearchField>
