--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -1,7 +1,8 @@
 <mvc:View
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:l="sap.ui.layout">
+	xmlns:l="sap.ui.layout"
+    controllerName="PedroAutoPecas.controller.Cadastro">
     <Page 
         showHeader="true" 
         enableScrolling="true" 
@@ -13,13 +14,19 @@
             <Button text="{i18n>botaoSalvar}" icon="sap-icon://add" width="auto" type="Accept"/>
             <Button text="{i18n>botaoCancelar}" icon="sap-icon://decline" width="auto" type="Reject"/>
         </headerContent>
-	    <l:VerticalLayout class="sapUiContentPadding" width="100%">
-            <Label text="Label A (required)" labelFor="input-a" />
-            <Input id="input-a" required="true" />
-            <Label text="Label B (bold)" labelFor="input-b" design="Bold" />
-            <Input id="input-b" />
-            <Label text="Label C (normal)" labelFor="input-c" />
-            <Input id="input-c" />
-	    </l:VerticalLayout>
+        <VBox class="sapUiSmallMargin">
+            <l:VerticalLayout class="sapUiContentPadding" width="50%">
+                <Label text="Nome" labelFor="input-a" />
+                <Input id="input-a" />
+                <Label text="Descrição" labelFor="input-b" />
+                <Input id="input-b" />
+                <Label text="Categoria" labelFor="input-c" />
+                <Input id="input-c" />
+                <Label text="Data de Fabricação" labelFor="input-d" />
+                <Input id="input-d" />
+                <Label text="Estoque" labelFor="input-f" />
+                <Input id="input-f" />
+            </l:VerticalLayout>
+        </VBox>
     </Page>
 </mvc:View>
