--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -5,7 +5,7 @@
 	xmlns="sap.m"
     xmlns:l="sap.ui.layout"
 	xmlns:f="sap.ui.layout.form">
-    <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar">
+    <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar" titleAlignment="Center">
         <headerContent>
             <Button text="{i18n>BotaoEditar}" icon="sap-icon://edit" width="auto" type="Accept"/>
             <Button text="{i18n>BotaoRemover}" icon="sap-icon://delete" width="auto" type="Reject"/>
