Campo estoque so aceita numero

--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -41,7 +41,8 @@
                 <Input
                     id="estoque" 
                     value="{pecas>/estoque}" 
-                    placeholder="Quantidade de Peça"/>
+                    placeholder="Quantidade de Peça"
+                    liveChange="aoMudarCampoEstoque"/>
             </l:VerticalLayout>
         </VBox>
     </Page>
