--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -28,6 +28,7 @@
                     placeholder="Tipo de Peça"/>
                 <Label text="{i18n>CampoCategoria}" />
                 <Input
+                    type="Text"
                     id="categoria" 
                     value="{pecas>/categoria}" 
                     placeholder="Categoria de Peça"
@@ -40,6 +41,7 @@
                     placeholder="Dia/Mês/Ano"/>
                 <Label text="{i18n>CampoEstoque}" />
                 <Input
+                    type="Number"
                     id="estoque" 
                     value="{pecas>/estoque}" 
                     placeholder="Quantidade de Peça"
