--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -16,30 +16,30 @@
         </headerContent>
         <VBox class="sapUiSmallMargin">
             <l:VerticalLayout class="sapUiContentPadding" width="50%">
-                <Label text="{i18n>CampoNome}" />
+                <Label text="{i18n>CampoNome}" required="true" />
                 <Input 
                     id="nome"
                     value="{pecas>/nome}" 
                     placeholder="Nome de Peça"/>
-                <Label text="{i18n>CampoDescricao}" />
+                <Label text="{i18n>CampoDescricao}" required="true"/>
                 <Input
                     id="descricao" 
                     value="{pecas>/descricao}" 
                     placeholder="Tipo de Peça"/>
-                <Label text="{i18n>CampoCategoria}" />
+                <Label text="{i18n>CampoCategoria}" required="true"/>
                 <Input
                     id="categoria" 
                     value="{pecas>/categoria}" 
                     placeholder="Categoria de Peça"
                     liveChange="aoMudarCampoCategoria"/>
-                <Label text="{i18n>CampoDataDeFabricacao}"/>
+                <Label text="{i18n>CampoDataDeFabricacao}" required="true"/>
                 <DatePicker
                     id="data" 
                     value="{pecas>/dataDeFabricacao}" 
                     valueFormat="yyyy-MM-ddTHH:mm:ss"
                     displayFormat="dd/MM/yyyy"
                     placeholder="Dia/Mês/Ano"/>
-                <Label text="{i18n>CampoEstoque}" />
+                <Label text="{i18n>CampoEstoque}" required="true"/>
                 <Input
                     id="estoque" 
                     value="{pecas>/estoque}" 
