tentando arrumar campo estoque

--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -34,7 +34,7 @@
                     liveChange="aoMudarCampoCategoria"/>
                 <Label text="{i18n>CampoDataDeFabricacao}" required="true"/>
                 <DatePicker
-                    id="data" 
+                    id="dataDeFabricacao" 
                     value="{pecas>/dataDeFabricacao}" 
                     valueFormat="yyyy-MM-ddTHH:mm:ss"
                     displayFormat="dd/MM/yyyy"
