--- a/WEB/wwwroot/view/Cadastro.view.xml
+++ b/WEB/wwwroot/view/Cadastro.view.xml
@@ -8,8 +8,8 @@
         enableScrolling="true" 
         showNavButton="true"
         navButtonPress=".aoClicarVoltar" 
-        title="{i18n>TituloCadastro}" 
-        titleAlignment="Center">
+        titleAlignment="Center"
+        id = "titulo">
         <headerContent>
             <Button text="{i18n>botaoSalvar}" icon="sap-icon://add" width="auto" type="Accept" press=".aoClicarSalvar"/>
             <Button text="{i18n>botaoCancelar}" icon="sap-icon://decline" width="auto" type="Reject" press="aoClicarCancelar"/>
