--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -7,7 +7,7 @@
 	xmlns:f="sap.ui.layout.form">
     <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar" titleAlignment="Center">
         <headerContent>
-            <Button text="{i18n>BotaoEditar}" icon="sap-icon://edit" width="auto" type="Accept"/>
+            <Button text="{i18n>BotaoEditar}" icon="sap-icon://edit" width="auto" type="Accept" press="aoClicarEditar"/>
             <Button text="{i18n>BotaoRemover}" icon="sap-icon://delete" width="auto" type="Reject"/>
         </headerContent>
         <VBox class="sapUiSmallMargin">
