--- a/WEB/wwwroot/view/ListaDePecas.view.xml
+++ b/WEB/wwwroot/view/ListaDePecas.view.xml
@@ -12,7 +12,7 @@
                         <Title text="{i18n>TituloDaLista}"/>
                         <ToolbarSpacer/>
                         <OverflowToolbarButton press="aoClicarAdicionar" tooltip="Adicionar" text="Add" icon="sap-icon://add-equipment" type="Accept" />
-                        <SearchField search="aoClicarProcurarPeca">
+                        <SearchField liveChange="aoClicarProcurarPeca">
                             <layoutData><OverflowToolbarLayoutData maxWidth="300px" shrinkable="true" priority="NeverOverflow"/></layoutData>
                         </SearchField>
                     </OverflowToolbar>
