--- a/WEB/wwwroot/view/Detalhe.view.xml
+++ b/WEB/wwwroot/view/Detalhe.view.xml
@@ -8,7 +8,7 @@
     <Page title="{i18n>TituloDeDetalhe}" showNavButton="true" navButtonPress=".aoClicarVoltar" titleAlignment="Center">
         <headerContent>
             <Button text="{i18n>BotaoEditar}" icon="sap-icon://edit" width="auto" type="Accept" press="aoClicarEditar"/>
-            <Button text="{i18n>BotaoRemover}" icon="sap-icon://delete" width="auto" type="Reject"/>
+            <Button text="{i18n>BotaoRemover}" icon="sap-icon://delete" width="auto" type="Reject" press="aoClicarRemover"/>
         </headerContent>
         <VBox class="sapUiSmallMargin">
             <f:SimpleForm id="SimpleFormDisplay354"
